Revision history for Perl extension Module::Starter

1.71    Fri Jan 30 13:28:31 2015
        * GH #47: create_t breaks plugins. (David Pottage)

1.70	Tue Jan 20 20:56:31 2015
        * Change the url for issues from rt.cpan.org to GitHub (David Pottage)
        * Added a missing module to prerequisites (David Pottage)
        * Marked t/pod* test scripts as RELEASE_TESTING (David Pottage)
        * Moved boilerplate test to xt/ directory (David Pottage)
        * Added a --fatalize option to generate code where warnings are fatal
          This changes the default behaviour, as fatal warnings are now considered
          unwise for any public module that many others depend on.
          See: http://blogs.perl.org/users/peter_rabbitson/2014/01/fatal-warnings-are-a-ticking-time-bomb-via-chromatic.html

1.62    Sun Dec  8 11:49:21 2013
        * Fix regexp in tests to stop failing on 5.8.x (Sawyer X).
        * Fix FSF address in template block and tests (Brian Manning).
        * Typo fixes (David Steinbrunner).

1.61    Fri Dec  6 14:01:19 2013
        * Stop getpwuid calls on Windows, instead prompt user for author.
          (Martin McGrath)

1.60    Thu Oct 25 20:29:50 2012
        * Guess author from getpwuid if not provided (Hilko Bengen).
        * Guess email from $ENV{'EMAIL'} if not provided (Hilko Bengen).

1.59    Thu Oct 25 19:54:05 2012
        * Skip POD tests unless RELEASE_TESTING environment is on.
          (Alberto Simoes)

1.58_03 Fri May 11 16:24:44 2012
        -- Trying to clean up test failures. More to come.

1.58_02 Wed Apr 25 12:53:34 2012
        -- All changes in this release are by Brendan Byrd (SineSwiper).
           Thank you! :)

        Licenses:
        * Add GPL3 licenses (fixes RT #72321).
        * Add all other supported licenses, including Software::License
          support (fixes RT #68634).

        New Params:
        * Make ignores_type an arrayref (closes Pull Request #8).