@@ -920,7 +920,6 @@ my \$builder = Module::Build->new(
         #'Foo::Bar::Module' => 5.0401,
     },
     add_to_cleanup     => [ '$self->{distro}-*' ],
-    create_makefile_pl => 'traditional',
 );
 
 \$builder->create_build_script();
